feat: modulo para registrar as incrições do ususario criado
